# finora

./: .gitignore  README.md  pyproject.toml
config/: broker.yaml  data.yaml  ops.yaml  risk.yaml  strategies.yaml  universe.yaml
finora/: cli.py
finora/backtest/: __init__.py  report.py  runner.py
finora/core/: __init__.py  config.py  errors.py  log.py  models.py
finora/data/: __init__.py  etl.py  events.py  qlib_convert.py  store.py  universe.py
finora/execution/: __init__.py  broker.py  futu_broker.py  oms.py  rebalance.py  sim_broker.py
finora/ops/: __init__.py  alerts.py  health.py  logging.py
finora/research/: __init__.py  report.py
finora/risk/: __init__.py  circuit_breaker.py  gate.py  kill_switch.py  quarantine.py  reconcile.py
finora/strategy/: __init__.py  base.py  bollinger.py  ma_cross.py  momentum.py  qlib_strategy.py  rsi.py  technical.py  train.py
finora/web/: __init__.py  app.py  routes.py  schemas.py  strategy_store.py
tests/: test_alerts.py  test_backtest_report.py  test_bollinger.py  test_circuit_breaker.py  test_cli.py  test_core.py  test_etl.py  test_events.py  test_health.py  test_kill_switch.py  test_ma_cross.py  test_momentum.py  test_oms.py  test_ops_logging.py  test_qlib_convert.py  test_quarantine.py  test_rebalance.py  test_reconcile.py  test_research_isolation.py  test_risk_gate.py  test_rsi.py  test_sim_broker.py  test_store.py  test_strategy_base.py  test_universe.py  test_web.py
webapp/: .gitignore  package.json  pnpm-lock.yaml
webapp/app/: layout.tsx  page.tsx
webapp/components/: candlestick-chart.tsx  nav.tsx  (+5 more)
(+36 files in other folders)
