[project]
name = "finora"
version = "0.1.0"
description = "Personal quantitative trading system: OpenBB data, Qlib research, risk-gated Futu execution (US equities, daily rebalance)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "PyYAML>=6",
    "typer>=0.12",
    "structlog>=24",
    "requests>=2.31",
    "pandas-market-calendars>=4.3",
    "lxml>=5.0",
]

[project.optional-dependencies]
openbb = ["openbb>=4.3"]
qlib = ["pyqlib>=0.9.6"]
futu = ["futu-api>=9.0"]
backtesting = ["backtesting>=0.3.3"]

[project.scripts]
finora = "finora.cli:app"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finora"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
